// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Getting chart data should create series from single measure 1`] = `
Object {
  "categories": Array [
    undefined,
  ],
  "series": Array [
    Object {
      "data": Array [
        Object {
          "drillContext": Array [
            Object {
              "id": "metric-0",
              "value": "# of Accounts",
            },
          ],
          "drilldown": false,
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 118,
        },
      ],
      "legendIndex": 0,
      "name": "# of Accounts",
    },
  ],
}
`;

exports[`Getting chart data should create series from single measure and attribute 1`] = `
Object {
  "categories": Array [
    "",
    "Churned",
    "N/A",
    "OK",
    "Potentially Churned / Salesforce Issues",
  ],
  "series": Array [
    Object {
      "data": Array [
        Object {
          "drillContext": Array [
            Object {
              "id": "1",
              "value": "",
            },
            Object {
              "id": "metric-0",
              "value": "# of Accounts",
            },
          ],
          "drilldown": false,
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 1,
        },
        Object {
          "drillContext": Array [
            Object {
              "id": "321199",
              "value": "Churned",
            },
            Object {
              "id": "metric-0",
              "value": "# of Accounts",
            },
          ],
          "drilldown": false,
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 25,
        },
        Object {
          "drillContext": Array [
            Object {
              "id": "2288",
              "value": "N/A",
            },
            Object {
              "id": "metric-0",
              "value": "# of Accounts",
            },
          ],
          "drilldown": false,
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 1,
        },
        Object {
          "drillContext": Array [
            Object {
              "id": "321198",
              "value": "OK",
            },
            Object {
              "id": "metric-0",
              "value": "# of Accounts",
            },
          ],
          "drilldown": false,
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 153,
        },
        Object {
          "drillContext": Array [
            Object {
              "id": "321216",
              "value": "Potentially Churned / Salesforce Issues",
            },
            Object {
              "id": "metric-0",
              "value": "# of Accounts",
            },
          ],
          "drilldown": false,
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 27,
        },
      ],
      "legendIndex": 0,
      "name": "# of Accounts",
    },
  ],
}
`;
